# mcp_demo

./: .env.example  DEMO_PROMPTS.md  README.md  pyproject.toml
docs/: index.md
docs/notebooks/: google_adk_basics.ipynb
src/customer_support/: __init__.py  agent.py
src/customer_support/.adk/: session.db
src/customer_support/adk_client/: __init__.py  agent.py  prompts.py  run_demo.py
src/customer_support/core/: __init__.py  audit.py  database.py  models.py  repository.py  support_service.py
src/customer_support/mcp/: __init__.py  server.py
